# portfolio

./: README.md  main.cpp
Project0/: device_driver.h  lcd.h  rom_0x08003000.elf  rom_0x08003000.map
Project1/: client.c  server.c
Project2/: Makefile  dht.c  iot_client_bluetooth.c  iot_client_sensor.c  iot_server.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Project3/AiotClient_tab5-master/AiotClient_tab5-master/: AiotClient.pro  AiotClient.pro.user.e14a5ad  AiotClient.qrc  README.md  Tab2cctvwidget.qml  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  socketclient.cpp  socketclient.h  tab1socketclient.cpp  tab1socketclient.h  tab1socketclient.ui  tab2cctv.h  tab2cctvwidget.cpp  tab2cctvwidget.h  tab2cctvwidget.ui  tab3controlpannel.cpp  tab3controlpannel.h  tab3controlpannel.ui
Project3/cpp_camera_project-streaming/cpp_camera_project-streaming/: CMakeLists.txt  Makefile  README.md
Project3/cpp_camera_project-streaming/cpp_camera_project-streaming/include/network/: http_server.h  tcp_client.h
Project3/cpp_camera_project-streaming/cpp_camera_project-streaming/include/processing/: motion_detector.h  object_tracker.h  path_visualizer.h  tracked_object.h
Project3/cpp_camera_project-streaming/cpp_camera_project-streaming/src/: main.cpp
Project3/cpp_camera_project-streaming/cpp_camera_project-streaming/src/network/: http_server.cpp  tcp_client.cpp
Project3/cpp_camera_project-streaming/cpp_camera_project-streaming/src/processing/: motion_detector.cpp  object_tracker.cpp  path_visualizer.cpp
Project3/iot_server-master/iot_server-master/: CMakeLists.txt  Makefile
Project3/iot_server-master/iot_server-master/src/: iot_client.c  iot_server.c
Project3/ros_docker-master/ros_docker-master/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  finalmap.pgm  finalmap.yaml  map.pgm  map.yaml  navi.sh
Project3/ros_docker-master/ros_docker-master/catkin_ws/src/rosGoalClient/: CMakeLists.txt  package.xml
Project3/ros_docker-master/ros_docker-master/catkin_ws/src/rosGoalClient/src/: rosGoalClient.cpp
